--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MSC Group",
-  "name": "MSC Group",
+  "short_name": "MSC",
+  "name": "MSC",
   "icons": [
     {
       "src": "favicon.ico",
